--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "passport-local": "^1.0.0",
     "prettier": "^2.3.2",
     "prisma": "^4.1.0",
+    "prisma-offset-pagination": "0.0.4",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.5",
