add dynamic module and request interceptor

--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ DATABASE_URL="postgresql://postgres:someone@localhost:5432/firstnest?schema=publ
 JWT_SECRET="someTEXTForJwt44789&*((^&^))SECRET"
 
 JWT_EXPIRATION_TIME=300
+
+X_PROPERTY=WORKING
